<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/clearButton"
            android:layout_width="150dp"
            android:layout_height="37dp"
            android:layout_marginStart="24dp"
            android:onClick="clearFields"
            android:text="clear all items "
            app:layout_constraintBaseline_toBaselineOf="@+id/addButton"
            app:layout_constraintStart_toEndOf="@+id/addButton" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="150dp"
            android:layout_height="37dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="16dp"
            android:onClick="addItem"
            android:text="add new item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/costText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cost" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/frozen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <EditText
            android:id="@+id/quantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/cost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantity" />

        <EditText
            android:id="@+id/itemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/quantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/description"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/descriptionText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/costText" />

        <TextView
            android:id="@+id/frozen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/frozen"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/frozenButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/cost"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/costText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantityText" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="55dp"
            android:text="@string/item"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/itemText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/quantity"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/quantityText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemText" />

        <ToggleButton
            android:id="@+id/frozenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="ToggleButton"
            android:textOff="NO"
            android:textOn="YES"
            app:layout_constraintBottom_toTopOf="@+id/addButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frozen" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="168dp"
            android:layout_height="48dp"
            android:background="#2196F3"
            android:onClick="deleteFunc"
            android:text="DELETE ITEM IN LIST"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.654"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.859" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>